--- a/inteviewCode/index.html
+++ b/inteviewCode/index.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-  <script>
+  <!-- 递归实现深拷贝 -->
+  <!-- <script src="./deepCopy.js"></script> -->
+  <!-- 手写apply，call -->
+  <script src="./myApply.js"></script>
+  <!-- <script>
     function foo() {
       console.log(this.a)
     }
@@ -18,8 +22,8 @@
     }
     var a = 2
     var obj = { a: 3, doFoo}
-    obj.doFoo()
-  </script>
+    obj.doFoo();
+  </script> -->
 </body>
 
 </html>
