--- a/inteviewCode/index.html
+++ b/inteviewCode/index.html
@@ -4,14 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>this 问题大全</title>
+  <title>interviewCode</title>
 </head>
 
 <body>
   <!-- 递归实现深拷贝 -->
   <!-- <script src="./deepCopy.js"></script> -->
+
   <!-- 手写apply，call -->
   <script src="./myApply.js"></script>
+
   <!-- <script>
     function foo() {
       console.log(this.a)
