--- a/inteviewCode/index.html
+++ b/inteviewCode/index.html
@@ -12,7 +12,10 @@
   <!-- <script src="./deepCopy.js"></script> -->
 
   <!-- 手写apply，call -->
-  <script src="./myApply.js"></script>
+  <!-- <script src="./myApply.js"></script> -->
+
+  <!-- loverInterview -->
+  <script src="./loverInterview.js"></script>
 
   <!-- <script>
     function foo() {
