--- a/inteviewCode/index.html
+++ b/inteviewCode/index.html
@@ -9,13 +9,19 @@
 
 <body>
   <!-- 递归实现深拷贝 -->
-  <script src="./deepCopy.js"></script>
+  <!-- <script src="./deepCopy.js"></script> -->
 
   <!-- 手写apply，call -->
   <!-- <script src="./myApply.js"></script> -->
 
   <!-- loverInterview -->
   <!-- <script src="./loverInterview.js"></script> -->
+
+  <!-- iterator -->
+  <!-- <script src="./myIterator.js"></script> -->
+
+  <!-- unique -->
+  <script src="./unique.js"></script>
 
   <!-- <script>
     function foo() {
